--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 .main {
   display: flex;
   flex-direction: column;
-  height: 100vh;
+  min-height: 100vh;
 }
 
 .main:after {
@@ -72,7 +72,7 @@
 @media (min-width: 1200px) {
 
   .container-sm {
-    max-width: 1140px;
+    max-width: 1200px;
   }
 }
 
